--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "dotenv": "^9.0.1",
+    "dotenv": "^9.0.2",
     "express": "4.17.1",
+    "express-query-boolean": "^2.0.0",
+    "express-rate-limit": "^5.2.6",
+    "helmet": "^4.6.0",
     "joi": "^17.4.0",
-    "mongoose": "^5.12.8",
-    "morgan": "1.10.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.10",
+    "mongoose-paginate-v2": "^1.3.18",
+    "morgan": "1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
@@ -26,11 +34,5 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "nodemon": "2.0.7"
-  },
-  "main": ".eslintrc.js",
-  "bin": {
-    "template": "server.js"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
