--- a/.example.env
+++ b/.example.env
@@ -4,3 +4,9 @@ JWT_SECRET_KEY=
 UPLOAD_DIR=tmp
 PUBLIC_DIR=public
 AVATARS_OF_USERS=avatars
+
+
+CLOUDINARY_URL=
+CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
