--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.26.0",
+    "cloudinary": "^1.25.2",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "dotenv": "^9.0.2",
+    "dotenv": "^9.0.1",
     "express": "4.17.1",
     "express-query-boolean": "^2.0.0",
     "express-rate-limit": "^5.2.6",
@@ -22,10 +22,12 @@
     "jimp": "^0.16.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.10",
+    "mailgen": "^2.0.14",
+    "mongoose": "^5.12.8",
     "mongoose-paginate-v2": "^1.3.18",
     "morgan": "1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "uuid": "^8.3.2"
